--- a/object/object-js.html
+++ b/object/object-js.html
@@ -10,9 +10,9 @@
       <button id="save" onclick="Save()">Save</button>
       </div>
       <div id="memebers" style="margin-left: 550px">
-        <button id="add">+</button>
       </div>
-      <div id="exhibit"></div>
+      <div id="exhibit">
+      </div>
       <script src='object-js.js'></script>
     </body>
 </html>
