Added new changes

--- a/memberList/memberList.html
+++ b/memberList/memberList.html
@@ -13,7 +13,7 @@
       </div>
       <div id="exhibit">
       </div>
-      <script src='practice_member_list.js'></script>
+      <script src='objectListMember.js'></script>
     </body>
 </html>
 
